2009-05-10  Maia Kozheva <sikon@ubuntu.com>

	* configure.in:
	  src/mp4file.c:
	  src/mp4file.h:
	  src/misc.c:
	  
      Detect and load libmp4v2 at runtime rather than compile time.

2009-04-20  Todd Zullinger  <tmz@pobox.com>

	* scripts/convert-2mp3.sh: Improve lame genre test

	  Lame prints the output of --genre-list to stderr.  The grep
	  for $genre was also too lenient and matched more than it
	  should.

2009-04-20  Todd Zullinger  <tmz@pobox.com>

	* scripts/convert-2mp3.sh: Improve lame genre test

	  Lame prints the output of --genre-list to stderr.  The grep
	  for $genre was also too lenient and matched more than it
	  should.

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display.c
	  src/display_tracks.c
	  data/gtkpod.glade:

	  Clean up statusbar display in main window (remove resize
	  grip when statusbar is not at the rightmost corner).

	  Work around a bug in GTK+ that puts the sensitive area of
	  the resize grip at the wrong position after a resize of the
	  window or hiding of the filter tab arrow by manually
	  updating the contents of the statusbar after a resize and
	  after hiding the arrow.

	  Changes to gtkpod.glade are small but diff is excessive even
	  if saving twice (V3.4.5).

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* file_itunesdb.c (gp_write_itdb): fix typo.

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* file_itunesdb.c (create_transfer_information_dialog): keep
          on top of all other windows. Thanks to Daniele Forsi for the
          patch.

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* file_itunesdb.c (gp_write_itdb): fix memory leak. Thanks to
          Daniele Forsi for the patch.

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* file_itunesdb.c:

	  Replace ALL prefs_get_int("write_extended_info") calls with
	  a pre-defined TRUE macro -- thereby securely ignoring the
	  prefs settings.

	* prefs.c (cleanup_keys):
