@@ -7,6 +7,15 @@
 	  
       Detect and load libmp4v2 at runtime rather than compile time.
 
+	* src/infodlg.c:
+	  src/infodlg.h:
+	  src/prefsdlg.c:
+	  src/help.c:
+	  src/help.h:
+	  po/ru.po:
+
+      Update copyright credentials.
+
 2009-04-20  Todd Zullinger  <tmz@pobox.com>
 
 	* scripts/convert-2mp3.sh: Improve lame genre test
